cleanups and updates

--- a/.env.example
+++ b/.env.example
@@ -23,13 +23,14 @@ CUSTOM_LLM_BASE_URL=http://localhost:8080
 CUSTOM_LLM_MODEL=custom-model
 CUSTOM_LLM_API_KEY=your_custom_llm_key_here
 
-# System Configuration
+# Redis Configuration
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_PASSWORD=
 REDIS_URL=redis://redis:6379/0
 
+# RabbitMQ Configuration
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
 RABBITMQ_USER=guest
@@ -37,13 +38,26 @@ RABBITMQ_PASSWORD=guest
 RABBITMQ_VHOST=/
 RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
 
-# Security Configuration (for dev environment)
-REDIS_PASSWORD=redis123
-RABBITMQ_USER=admin
-RABBITMQ_PASSWORD=secure123
+# WebGUI Configuration
 WEBGUI_HOST=0.0.0.0
 WEBGUI_PORT=8000
 LOG_LEVEL=INFO
+
+# Authentication (required for production)
+WEBGUI_SECRET_KEY=
+OAUTH2_GOOGLE_CLIENT_ID=
+OAUTH2_GOOGLE_CLIENT_SECRET=
+OAUTH2_GITHUB_CLIENT_ID=
+OAUTH2_GITHUB_CLIENT_SECRET=
+OAUTH2_AZURE_CLIENT_ID=
+
+# Real-time Features
+WEBSOCKET_ENABLED=true
+REDIS_PUBSUB_CHANNEL=webgui_updates
+
+# Reporting
+REPORT_EXPORT_PATH=/app/reports
+PDF_GENERATOR_ENGINE=reportlab
 
 # Advanced Features
 ENABLE_SELF_HEALING=true
@@ -54,3 +68,6 @@ ENABLE_CONTEXT_AWARE_TESTING=true
 # Model Selection
 PRIMARY_MODEL_PROVIDER=openai
 FALLBACK_MODEL_PROVIDERS=ollama
+
+# Team Configuration
+QA_TEAM_SIZE=standard
