--- a/config/team_config.json
+++ b/config/team_config.json
@@ -23,6 +23,10 @@
     "qa-manager": {
       "name": "QA Manager",
       "alias": ["orchestrator", "test-lead"],
+      "role": "qa_manager",
+      "celery_task": "qa_manager.process_requirements",
+      "celery_queue": "qa_manager",
+      "redis_prefix": "manager",
       "focus": "Orchestration, test planning, delegation, fuzzy verification",
       "tools": ["TestPlanDecompositionTool", "FuzzyVerificationTool"],
       "complexity": "high",
@@ -31,6 +35,10 @@
     "senior-qa": {
       "name": "Senior QA Engineer",
       "alias": ["senior-test-architect", "test-architect"],
+      "role": "senior_qa",
+      "celery_task": "senior_qa.handle_complex_scenario",
+      "celery_queue": "senior_qa",
+      "redis_prefix": "senior",
       "focus": "Self-healing UI, model-based testing, edge case analysis, complex scenarios",
       "tools": ["SelfHealingTool", "ModelBasedTestingTool", "EdgeCaseAnalysisTool"],
       "complexity": "high",
@@ -39,6 +47,10 @@
     "junior-qa": {
       "name": "Junior QA Worker",
       "alias": ["test-executor", "qa-automation-engineer"],
+      "role": "junior_qa",
+      "celery_task": "junior_qa.execute_regression_test",
+      "celery_queue": "junior_qa",
+      "redis_prefix": "junior",
       "focus": "Regression execution, synthetic data generation, test optimization",
       "tools": ["RegressionTestingTool", "SyntheticDataGeneratorTool", "TestExecutionOptimizerTool", "VisualRegressionTool"],
       "complexity": "medium",
@@ -63,6 +75,10 @@
     "qa-analyst": {
       "name": "QA Analyst",
       "alias": ["quality-analyst", "test-analyst"],
+      "role": "qa_analyst",
+      "celery_task": "qa_analyst.analyze_and_report",
+      "celery_queue": "qa_analyst",
+      "redis_prefix": "analyst",
       "focus": "Reporting, data aggregation, traceability, coverage analysis",
       "tools": ["DataOrganizationReportingTool", "SecurityAssessmentTool", "PerformanceProfilingTool", "TestTraceabilityTool"],
       "complexity": "medium",
@@ -79,6 +95,10 @@
     "security-compliance": {
       "name": "Security & Compliance Agent",
       "alias": ["security-guardian", "compliance-officer"],
+      "role": "security_compliance",
+      "celery_task": "security_compliance_agent.run_security_compliance_audit",
+      "celery_queue": "security_compliance",
+      "redis_prefix": "security_compliance",
       "focus": "OWASP testing, GDPR/PCI DSS compliance, vulnerability scanning",
       "tools": ["ComprehensiveSecurityAssessmentTool", "GDPRComplianceTool", "PCIDSSComplianceTool"],
       "complexity": "high",
@@ -95,6 +115,10 @@
     "performance": {
       "name": "Performance & Resilience Agent",
       "alias": ["performance-specialist", "sre"],
+      "role": "performance",
+      "celery_task": "performance_agent.run_performance_suite",
+      "celery_queue": "performance",
+      "redis_prefix": "performance",
       "focus": "Performance monitoring, load testing, resilience validation",
       "tools": ["PerformanceMonitoringTool", "LoadTestingTool", "ResilienceValidationTool"],
       "complexity": "high",
