--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       - "5672:5672"
       - "15672:15672"
     environment:
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-guest}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD:-guest}
     networks:
       - qa-network
     volumes:
@@ -45,7 +45,7 @@ services:
       dockerfile: agents/manager/Dockerfile
     environment:
       - REDIS_URL=redis://redis:6379/0
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+      - RABBITMQ_URL=amqp://${RABBITMQ_USER:-guest}:${RABBITMQ_PASSWORD:-guest}@rabbitmq:5672/
       - AGENT_ROLE=manager
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
@@ -67,7 +67,7 @@ services:
           cpus: '1.0'
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "python", "-c", "import redis; import pika; print('healthy')"]
+      test: ["CMD", "python", "-c", "import redis; r = redis.Redis(host='redis', port=6379); r.ping()"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -78,7 +78,7 @@ services:
       dockerfile: agents/senior/Dockerfile
     environment:
       - REDIS_URL=redis://redis:6379/0
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+      - RABBITMQ_URL=amqp://${RABBITMQ_USER:-guest}:${RABBITMQ_PASSWORD:-guest}@rabbitmq:5672/
       - AGENT_ROLE=senior
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
@@ -107,7 +107,7 @@ services:
           cpus: '1.0'
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "python", "-c", "import redis; import pika; print('healthy')"]
+      test: ["CMD", "python", "-c", "import redis; r = redis.Redis(host='redis', port=6379); r.ping()"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -118,7 +118,7 @@ services:
       dockerfile: agents/junior/Dockerfile
     environment:
       - REDIS_URL=redis://redis:6379/0
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+      - RABBITMQ_URL=amqp://${RABBITMQ_USER:-guest}:${RABBITMQ_PASSWORD:-guest}@rabbitmq:5672/
       - AGENT_ROLE=junior
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
@@ -147,7 +147,7 @@ services:
           cpus: '0.75'
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "python", "-c", "import redis; import pika; print('healthy')"]
+      test: ["CMD", "python", "-c", "import redis; r = redis.Redis(host='redis', port=6379); r.ping()"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -158,7 +158,7 @@ services:
       dockerfile: agents/analyst/Dockerfile
     environment:
       - REDIS_URL=redis://redis:6379/0
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+      - RABBITMQ_URL=amqp://${RABBITMQ_USER:-guest}:${RABBITMQ_PASSWORD:-guest}@rabbitmq:5672/
       - AGENT_ROLE=analyst
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
@@ -186,7 +186,7 @@ services:
           cpus: '0.75'
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "python", "-c", "import redis; import pika; print('healthy')"]
+      test: ["CMD", "python", "-c", "import redis; r = redis.Redis(host='redis', port=6379); r.ping()"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -197,7 +197,7 @@ services:
       dockerfile: agents/security_compliance/Dockerfile
     environment:
       - REDIS_URL=redis://redis:6379/0
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+      - RABBITMQ_URL=amqp://${RABBITMQ_USER:-guest}:${RABBITMQ_PASSWORD:-guest}@rabbitmq:5672/
       - AGENT_ROLE=security_compliance
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
@@ -219,7 +219,7 @@ services:
           cpus: '0.75'
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "python", "-c", "import redis; import pika; print('healthy')"]
+      test: ["CMD", "python", "-c", "import redis; r = redis.Redis(host='redis', port=6379); r.ping()"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -230,7 +230,7 @@ services:
       dockerfile: agents/performance/Dockerfile
     environment:
       - REDIS_URL=redis://redis:6379/0
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+      - RABBITMQ_URL=amqp://${RABBITMQ_USER:-guest}:${RABBITMQ_PASSWORD:-guest}@rabbitmq:5672/
       - AGENT_ROLE=performance
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
@@ -252,7 +252,7 @@ services:
           cpus: '1.0'
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "python", "-c", "import redis; import pika; print('healthy')"]
+      test: ["CMD", "python", "-c", "import redis; r = redis.Redis(host='redis', port=6379); r.ping()"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -265,6 +265,7 @@ services:
       - "8000:8000"
     environment:
       - REDIS_URL=redis://redis:6379/0
+      - RABBITMQ_URL=amqp://${RABBITMQ_USER:-guest}:${RABBITMQ_PASSWORD:-guest}@rabbitmq:5672/
       - WEBGUI_HOST=0.0.0.0
       - WEBGUI_PORT=8000
       - OPENAI_API_KEY=${OPENAI_API_KEY}
