--- a/k8s/manifests/ingress.yaml
+++ b/k8s/manifests/ingress.yaml
@@ -4,14 +4,16 @@ metadata:
   name: agentic-qa-ingress
   namespace: agentic-qa
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/rate-limit: "100"
+    nginx.ingress.kubernetes.io/rate-limit-window: "1m"
+    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
+  ingressClassName: nginx
   tls:
   - hosts:
     - qa.yourdomain.com
-    - rabbitmq.yourdomain.com
     secretName: agentic-qa-tls
   rules:
   - host: qa.yourdomain.com
@@ -24,13 +26,3 @@ spec:
             name: webgui-service
             port:
               number: 8000
-  - host: rabbitmq.yourdomain.com
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: rabbitmq-service
-            port:
-              number: 15672
