--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "agnostic-qa-system"
-version = "1.0.0"
+version = "2026.2.16"
 description = "Agentic QA Team System - Containerized, multi-agent QA platform powered by CrewAI"
 readme = "README.md"
 license = {text = "MIT"}
@@ -83,12 +83,16 @@ web = [
     "fastapi>=0.115.0",
     "uvicorn>=0.32.0",
     "websockets>=13.0",
+    "PyJWT[crypto]>=2.8.0",
+    "reportlab>=4.0",
+    "requests>=2.31.0",
 ]
 ml = [
     "numpy>=1.26.4,<2.0.0",  # numpy 2.x incompatible with langchain 0.x (<2.0 requirement)
     "pandas>=2.2.2",
     "scikit-learn>=1.5.1",
     "opencv-python>=4.10.0.84",
+    "faker>=28.0.0",
 ]
 browser = [
     "playwright>=1.45.0",
