--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,13 @@ OAUTH2_GITHUB_CLIENT_ID=
 OAUTH2_GITHUB_CLIENT_SECRET=
 OAUTH2_AZURE_CLIENT_ID=
 
+# Machine-to-machine API key (static; for simple single-key deployments)
+# Use POST /api/auth/api-keys for per-client Redis-backed keys instead.
+AGNOSTIC_API_KEY=
+
+# CORS — comma-separated list of allowed origins for browser clients
+CORS_ALLOWED_ORIGINS=http://localhost:18789,http://localhost:3001
+
 # Real-time Features
 WEBSOCKET_ENABLED=true
 REDIS_PUBSUB_CHANNEL=webgui_updates
