fixes and erroring

--- a/k8s/helm/agentic-qa/templates/webgui.yaml
+++ b/k8s/helm/agentic-qa/templates/webgui.yaml
@@ -66,6 +66,16 @@ spec:
             port: http
           initialDelaySeconds: 10
           periodSeconds: 5
+        {{- if .Values.startupProbe.enabled }}
+        startupProbe:
+          httpGet:
+            path: /health
+            port: http
+          initialDelaySeconds: {{ .Values.startupProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.startupProbe.periodSeconds }}
+          failureThreshold: {{ .Values.startupProbe.failureThreshold }}
+          timeoutSeconds: {{ .Values.startupProbe.timeoutSeconds }}
+        {{- end }}
       volumes:
       - name: tmp
         emptyDir: {}
