--- a/k8s/manifests/qa-manager.yaml
+++ b/k8s/manifests/qa-manager.yaml
@@ -73,6 +73,14 @@ spec:
           initialDelaySeconds: 10
           periodSeconds: 5
           timeoutSeconds: 3
+        startupProbe:
+          httpGet:
+            path: /health
+            port: 8001
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          failureThreshold: 30
+          timeoutSeconds: 3
       volumes:
       - name: tmp
         emptyDir: {}
