--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,10 +43,17 @@ classifiers = [
 requires-python = ">=3.11,<3.15"
 
 dependencies = [
-    "crewai>=0.11.0,<1.0.0",  # crewai 1.x requires Python <3.14; staying on 0.x for Python 3.14 compatibility
-    "langchain>=0.1.0,<0.2.0",  # crewai 0.x requires langchain <0.2
-    "langchain-openai>=0.0.5,<0.1.0",  # Required by crewai 0.x
-    "langchain-community>=0.0.38,<0.1.0",  # Required by crewai 0.x
+    # NOTE: crewai 0.x + langchain 0.1.x internally use pydantic's v1 compatibility shim,
+    # which is broken on Python 3.14 (ForwardRef._evaluate removed). The project's own code
+    # is fully pydantic v2 native; the shim is a transitive dep issue. Production containers
+    # use Python 3.11 (docker/Dockerfile.base) where this works correctly.
+    # Python 3.14 is NOT supported by any released crewai version: crewai 0.x uses langchain
+    # 0.1.x (pydantic.v1 shim), crewai 1.x uses chromadb which also uses pydantic.v1 — both
+    # fail on Python 3.14. Tracked in roadmap as a future upgrade once upstream fixes land.
+    "crewai>=0.11.0,<1.0.0",
+    "langchain>=0.1.0,<0.2.0",  # crewai 0.x requires langchain 0.1.x
+    "langchain-openai>=0.0.5,<0.1.0",  # crewai 0.x requires langchain-openai 0.0.x
+    "langchain-community>=0.0.38,<0.1.0",  # crewai 0.x requires langchain-community 0.0.x
     "redis>=5.0.8",
     "celery>=5.4.0",
     "pytest>=8.3.2",
@@ -88,7 +95,7 @@ web = [
     "requests>=2.31.0",
 ]
 ml = [
-    "numpy>=1.26.4,<2.0.0",  # numpy 2.x incompatible with langchain 0.x (<2.0 requirement)
+    "numpy>=1.26.4,<2.0.0",  # langchain 0.1.x requires numpy <2.0; remove cap when upgrading to langchain 0.2+
     "pandas>=2.2.2",
     "scikit-learn>=1.5.1",
     "opencv-python>=4.10.0.84",
