--- a/.env.example
+++ b/.env.example
@@ -72,6 +72,15 @@ ENABLE_FUZZY_VERIFICATION=true
 ENABLE_RISK_BASED_PRIORITIZATION=true
 ENABLE_CONTEXT_AWARE_TESTING=true
 
+# AGNOS OS Integration (optional — enables routing through agnosticos LLM Gateway)
+# Set AGNOS_LLM_GATEWAY_ENABLED=true when running Agnostic on or alongside AGNOS OS.
+# The AGNOS LLM Gateway (agnosticos/userland/llm-gateway) exposes an OpenAI-compatible
+# REST API at port 8088 and adds per-agent token accounting, rate limiting, and caching.
+AGNOS_LLM_GATEWAY_ENABLED=false
+AGNOS_LLM_GATEWAY_URL=http://localhost:8088
+AGNOS_LLM_GATEWAY_API_KEY=agnos-local
+AGNOS_LLM_GATEWAY_MODEL=default
+
 # Model Selection
 PRIMARY_MODEL_PROVIDER=openai
 FALLBACK_MODEL_PROVIDERS=ollama
